content/_generated-doc/3.20/config/quarkus-micrometer.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-enabled[`quarkus.micrometer.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Micrometer metrics support.

Micrometer metrics support is enabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-registry-enabled-default]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-registry-enabled-default[`quarkus.micrometer.registry-enabled-default`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.registry-enabled-default+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Micrometer MeterRegistry discovery.

Micrometer MeterRegistry implementations discovered on the classpath will be enabled automatically by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_REGISTRY_ENABLED_DEFAULT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_REGISTRY_ENABLED_DEFAULT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-enabled-default]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-enabled-default[`quarkus.micrometer.binder-enabled-default`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder-enabled-default+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Micrometer MeterBinder discovery.

Micrometer MeterBinder implementations discovered on the classpath will be enabled automatically by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_ENABLED_DEFAULT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_ENABLED_DEFAULT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-http-client-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-client-enabled[`quarkus.micrometer.binder.http-client.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-client.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Outbound HTTP request metrics support.

Support for HTTP client metrics will be enabled if Micrometer support is enabled, the REST client feature is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-http-server-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-server-enabled[`quarkus.micrometer.binder.http-server.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-server.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Inbound HTTP metrics support.

Support for HTTP server metrics will be enabled if Micrometer support is enabled, an extension serving HTTP traffic is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-jvm]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-jvm[`quarkus.micrometer.binder.jvm`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.jvm+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Micrometer JVM metrics support.

Support for JVM metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_JVM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_JVM+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-kafka-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-kafka-enabled[`quarkus.micrometer.binder.kafka.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.kafka.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Kafka metrics support.

Support for Kafka metrics will be enabled if Micrometer support is enabled, the Kafka Consumer or Producer interface is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_KAFKA_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_KAFKA_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-redis-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-redis-enabled[`quarkus.micrometer.binder.redis.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.redis.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Redis client metrics support.

Support for Redis metrics will be enabled if Micrometer support is enabled, the Quarkus Redis client extension is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_REDIS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_REDIS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-stork-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-stork-enabled[`quarkus.micrometer.binder.stork.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.stork.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Stork metrics support.

Support for Stork metrics will be enabled if Micrometer support is enabled, the Quarkus Stork extension is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_STORK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_STORK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-grpc-server-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-grpc-server-enabled[`quarkus.micrometer.binder.grpc-server.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.grpc-server.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
gRPC Server metrics support.

Support for gRPC server metrics will be enabled if Micrometer support is enabled, the gRPC server interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_GRPC_SERVER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_GRPC_SERVER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-grpc-client-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-grpc-client-enabled[`quarkus.micrometer.binder.grpc-client.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.grpc-client.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
gRPC Client metrics support.

Support for gRPC client metrics will be enabled if Micrometer support is enabled, the gRPC client interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_GRPC_CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_GRPC_CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-messaging-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-messaging-enabled[`quarkus.micrometer.binder.messaging.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.messaging.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Kafka metrics support.

Support for Reactive Messaging metrics will be enabled if Micrometer support is enabled, MessageObservationCollector interface is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_MESSAGING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_MESSAGING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-mp-metrics-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-mp-metrics-enabled[`quarkus.micrometer.binder.mp-metrics.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.mp-metrics.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Eclipse MicroProfile Metrics support.

Support for MicroProfile Metrics will be enabled if Micrometer
support is enabled and the MicroProfile Metrics dependency is present:

[source,xml]
----
<dependency>
  <groupId>org.eclipse.microprofile.metrics</groupId>
  <artifactId>microprofile-metrics-api</artifactId>
</dependency>
----

The Micrometer extension currently provides a compatibility layer that supports the MP Metrics API,
but metric names and recorded values will be different.
Note that the MP Metrics compatibility layer will move to a different extension in the future.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_MP_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_MP_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-virtual-threads-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-virtual-threads-enabled[`quarkus.micrometer.binder.virtual-threads.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.virtual-threads.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Virtual Threads metrics support.

Support for virtual threads metrics will be enabled if Micrometer support is enabled, this value is set to `true` (default), the JVM supports virtual threads (Java 21{plus}) and the `quarkus.micrometer.binder-enabled-default` property is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_VIRTUAL_THREADS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_VIRTUAL_THREADS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-virtual-threads-tags]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-virtual-threads-tags[`quarkus.micrometer.binder.virtual-threads.tags`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.virtual-threads.tags+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The tags to be added to the metrics. Empty by default. When set, tags are passed as: `key1=value1,key2=value2`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_VIRTUAL_THREADS_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_VIRTUAL_THREADS_TAGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-system]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-system[`quarkus.micrometer.binder.system`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.system+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Micrometer System metrics support.

Support for System metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_SYSTEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_SYSTEM+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-vertx-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-vertx-enabled[`quarkus.micrometer.binder.vertx.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.vertx.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Vert.x metrics support.

Support for Vert.x metrics will be enabled if Micrometer support is enabled, Vert.x MetricsOptions is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_VERTX_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_VERTX_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-binder-netty-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-netty-enabled[`quarkus.micrometer.binder.netty.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.netty.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Netty metrics support.

Support for Netty metrics will be enabled if Micrometer support is enabled, the Netty allocator classes are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_NETTY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_NETTY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-json-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-json-enabled[`quarkus.micrometer.export.json.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.json.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Support for export to JSON format. Off by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-json-path]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-json-path[`quarkus.micrometer.export.json.path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.json.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The path for the JSON metrics endpoint. The default value is `metrics`. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`. If the management interface is enabled, the value will be resolved as a path relative to `$++{++quarkus.management.root-path++}++`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`metrics`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-json-buffer-length]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-json-buffer-length[`quarkus.micrometer.export.json.buffer-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.json.buffer-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after the expiry, with this buffer length.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_BUFFER_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_BUFFER_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`3`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-json-expiry]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-json-expiry[`quarkus.micrometer.export.json.expiry`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.json.expiry+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after this expiry, with a particular buffer length.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_EXPIRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_EXPIRY+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-micrometer_quarkus-micrometer[icon:question-circle[title=More information about the Duration format]]
|`P3D`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-prometheus-enabled]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-prometheus-enabled[`quarkus.micrometer.export.prometheus.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.prometheus.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Support for export to Prometheus.

Support for Prometheus will be enabled if Micrometer support is enabled, the PrometheusMeterRegistry is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.registry-enabled-default` is true.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-prometheus-path]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-prometheus-path[`quarkus.micrometer.export.prometheus.path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.prometheus.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The path for the prometheus metrics endpoint (produces text/plain). The default value is
`metrics` and is resolved relative to the non-application endpoint (`q`), e.g.
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served
from the configured path.

If the management interface is enabled, the value will be resolved as a path relative to
`${quarkus.management.root-path}` (`q` by default), e.g.
`http://${quarkus.management.host}:${quarkus.management.port}/${quarkus.management.root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served from the configured path, e.g.
`http://${quarkus.management.host}:${quarkus.management.port}/metrics`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`metrics`

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus-micrometer-export-prometheus-default-registry]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-prometheus-default-registry[`quarkus.micrometer.export.prometheus.default-registry`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.prometheus.default-registry+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
By default, this extension will create a Prometheus MeterRegistry instance.

Use this attribute to veto the creation of the default Prometheus MeterRegistry.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_DEFAULT_REGISTRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_DEFAULT_REGISTRY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-server-match-patterns]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-server-match-patterns[`quarkus.micrometer.binder.http-server.match-patterns`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-server.match-patterns+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of regular expressions used to specify uri
labels in http metrics.

Vertx instrumentation will attempt to transform parameterized
resource paths, `/item/123`, into a generic form, `/item/{id}`,
to reduce the cardinality of uri label values.

Patterns specified here will take precedence over those computed
values.

For example, if `/item/\\\\d+=/item/custom` or
`/item/[0-9]+=/item/custom` is specified in this list,
a request to a matching path (`/item/123`) will use the specified
replacement value (`/item/custom`) as the value for the uri label.
Note that backslashes must be double escaped as `\\\\`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MATCH_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MATCH_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-server-ignore-patterns]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-server-ignore-patterns[`quarkus.micrometer.binder.http-server.ignore-patterns`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-server.ignore-patterns+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of regular expressions defining uri paths that should be ignored (not measured).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_IGNORE_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_IGNORE_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-server-suppress-non-application-uris]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-server-suppress-non-application-uris[`quarkus.micrometer.binder.http-server.suppress-non-application-uris`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-server.suppress-non-application-uris+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Suppress non-application uris from metrics collection.
This will suppress all metrics for non-application endpoints using
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.

Suppressing non-application uris is enabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_SUPPRESS_NON_APPLICATION_URIS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_SUPPRESS_NON_APPLICATION_URIS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-server-suppress4xx-errors]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-server-suppress4xx-errors[`quarkus.micrometer.binder.http-server.suppress4xx-errors`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-server.suppress4xx-errors+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Suppress 4xx errors from metrics collection for unmatched templates.
This configuration exists to limit cardinality explosion from caller side error. Does not apply to 404 errors.

Suppressing 4xx errors is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_SUPPRESS4XX_ERRORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_SUPPRESS4XX_ERRORS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-server-max-uri-tags]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-server-max-uri-tags[`quarkus.micrometer.binder.http-server.max-uri-tags`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-server.max-uri-tags+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Maximum number of unique URI tag values allowed. After the max number of tag values is reached, metrics with additional tag values are denied by filter.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MAX_URI_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MAX_URI_TAGS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`100`

a| [[quarkus-micrometer_quarkus-micrometer-export-prometheus-configuration-property-name]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-export-prometheus-configuration-property-name[`quarkus.micrometer.export.prometheus."configuration-property-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.export.prometheus."configuration-property-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Prometheus registry configuration properties.

A property source for configuration of the Prometheus MeterRegistry,
see https://micrometer.io/docs/registry/prometheus.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS__CONFIGURATION_PROPERTY_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS__CONFIGURATION_PROPERTY_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-client-match-patterns]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-client-match-patterns[`quarkus.micrometer.binder.http-client.match-patterns`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-client.match-patterns+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of regular expressions used to specify uri
labels in http metrics.

Outbount HTTP client instrumentation will attempt to transform parameterized
resource paths, `/item/123`, into a generic form, `/item/{id}`,
to reduce the cardinality of uri label values.

Patterns specified here will take precedence over those computed
values.

For example, if `/item/\\\\d+=/item/custom` or
`/item/[0-9]+=/item/custom` is specified in this list,
a request to a matching path (`/item/123`) will use the specified
replacement value (`/item/custom`) as the value for the uri label.
Note that backslashes must be double escaped as `\\\\`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_MATCH_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_MATCH_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-client-ignore-patterns]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-client-ignore-patterns[`quarkus.micrometer.binder.http-client.ignore-patterns`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-client.ignore-patterns+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of regular expressions defining uri paths that should be ignored (not measured).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_IGNORE_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_IGNORE_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-client-suppress4xx-errors]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-client-suppress4xx-errors[`quarkus.micrometer.binder.http-client.suppress4xx-errors`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-client.suppress4xx-errors+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Suppress 4xx errors from metrics collection for unmatched templates.
This configuration exists to limit cardinality explosion from caller side errors. Does not apply to 404 errors.

Suppressing 4xx errors is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_SUPPRESS4XX_ERRORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_SUPPRESS4XX_ERRORS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-micrometer_quarkus-micrometer-binder-http-client-max-uri-tags]] [.property-path]##link:#quarkus-micrometer_quarkus-micrometer-binder-http-client-max-uri-tags[`quarkus.micrometer.binder.http-client.max-uri-tags`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.micrometer.binder.http-client.max-uri-tags+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Maximum number of unique URI tag values allowed. After the max number of tag values is reached, metrics with additional tag values are denied by filter.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_MAX_URI_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_CLIENT_MAX_URI_TAGS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`100`

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-micrometer_quarkus-micrometer]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
